--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,7 +1,15 @@
 body {
-	color:red;
+	color:red; 
+	display: flex;
+	h1 {
+		font-size:2em; 
+	}
+}
 
-	h1{
-		font-size:2em;
+body {
+	font-size:15px; 
+	display: flex;
+	h1 {
+		font-size:2em; 
 	}
 }
