--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,1 +1,3 @@
-body{color:red;font-size:15px;display:flex}body h1{font-size:2em}
+body { color: red; display: -webkit-box; display: -ms-flexbox; display: flex; }
+
+body h1 { font-size: 2em; }
